2004-08-08  Ted Gould  <ted@gould.cx>

	* src/svg-profile.h, src/Makefile_insert:

	Adding the first support in for trying to determine which profiles are
	used with certain functionality, and if that is used by the current
	document.  Really, right now, there is no code changes to anything that
	compiles.  But this is the header file that contains the class that
	I'm plannig to use in the future.

2004-08-07  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/libnrtype/RasterFont.h, src/libnrtype/RasterFont.cpp:
	  Get rid of argumentless constructor (which was leaving
	  style.transform as random bits), replace with constructor taking
	  style argument.  Caller updated.
	  Disable default copy constructor and operator=.

2004-08-06  MenTaLguY <mental@rydia.net>

	* configure.in, src/gc-core.h, src/gc-object.h,
	  src/display/nr-arena-glyphs.cpp, src/display/nr-arena-group.cpp,
	  src/display/nr-arena-image.cpp, src/display/nr-arena-item.cpp,
	  src/display/nr-arena-shape.cpp, src/display/nr-arena.cpp,
	  src/helper/action.cpp, src/libnr/nr-object.cpp, src/libnr/nr-object.h:

	  make NRObject GC-aware

2004-08-06  David Turner <novalis@gnu.org
	* src/sp-shape.cpp (sp_shape_marker_get_transform): Make marker handling match
	SVG spec better.

2004-08-06  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/libnr/nr-matrix.h, src/libnr/nr-matrix.cpp:
	  NR::Matrix *= NR::scale: new.

	* src/sp-object.cpp, src/sp-object.h, src/sp-object-tree-iterator.h:
	  Move TreeIterator<SPObject *> specialization to snew file
	  sp-object-tree-iterator.h.
	  Mark several pointers as not being written through.
	  Correspondingly change TreeIterator specialization to
	  <SPObject const *> instead of <SPObject *>.

	* display/nr-arena-item.cpp, display/nr-arena-item.h:
	  Add NR::Matrix version of nr_arena_item_set_transform.

	* src/sp-item.h, src/sp-item.cpp (getRelativeTransform, partial_xform):
	  Mark pointers as not written through.
